2010-09-18  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Andreas Kling.

        [BREWMP] Fix a typo in key code name
        https://bugs.webkit.org/show_bug.cgi?id=46003

        AVK_CLR is the right Brew MP key code name for VK_BACK.

        * platform/brew/PlatformKeyboardEventBrew.cpp:
        (WebCore::windowsKeyCodeForKeyEvent):

2010-09-18  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Oliver Hunt.

        Gradient: Pre-reserve space for 2 color stops
        https://bugs.webkit.org/show_bug.cgi?id=46044

        Most gradients have only 2 color stops, pre-reserve space for these in m_stops
        to avoid growing the vector dynamically in the common case.

        * platform/graphics/Gradient.h:

2010-09-18  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, rolling out r67792.
        http://trac.webkit.org/changeset/67792
        https://bugs.webkit.org/show_bug.cgi?id=45976

        Broke over a hundred SVG tests.

        * platform/graphics/GraphicsContext.cpp:
        (WebCore::GraphicsContext::drawImage):
        (WebCore::GraphicsContext::drawImageBuffer):
        * platform/graphics/GraphicsContext.h:

2010-09-18  Mihai Parparita  <mihaip@chromium.org>

        Reviewed by Simon Fraser.

        webkitAnimationEnd event doesn't fire when skipping over final iteration
        https://bugs.webkit.org/show_bug.cgi?id=46010
        
        It's possible for AnimationBase::fireAnimationEventsIfNeeded to decide
        that the animation is ended while we're in the looping state, if the
        animation timer never fires during an iteration. That then fails the
        assert in AnimationBase::updateStateMachine (we don't expect
        AnimationStateInputEndTimerFired while in the looping state). Jump the
        state to AnimationStateEnding, which is more accurate.

        Test: animations/animation-end-event-short-iterations.html

        * page/animation/AnimationBase.cpp: